2008-12-08  Graham Cobb  <g+770@cobb.uk.net>

	* data/Makefile.am: Fix typo in icon filenames (bass... instead of base...)!

	* src/starling.c (starling_run): Change application name to GPE Audio player

	* debian/postinst: Add postinst script to rebuild hildon icon cache

	* hildon/gpe-todo.desktop.in.in (_Name): Change name to GPE Audio player

	* hildon/*.png: Add icons for 26x26, 40x40, 48x48 and 64x64.  
	Rename base.png to base-40x40.png

	* data/Makefile.am (nobase_icons_DATA): Create various icons for hildon

2008-11-27  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (worker_thread): When scanning files, don't add
	tracks with a 0 mtime to the meta data scanner queue.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/lastfm.c (maybe_submit): Only call submit if neither USER
	nor PASSWORD is the empty string.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (meta_data_changed): New function.
	(starling_run): Connect ST->DB's "changed-entry" signal to it.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (status_kick): Trigger status_update every half
	second.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (worker_thread): Use sqlite_exec instead of
	sqlite_exec_printf where possible.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (busy_handler): If COOKIE is not NULL, set *COOKIE
	to 1.  Reduce pause time.
	(main_thread_busy): New variable.
	(music_db_open): Pass it to sqlite_busy_handler for the main
	sqlite instance.
	(music_db_add_recursive_internal): If SQLITEH is no the main
	instance and MAIN_THREAD_BUSY is greater than 0, pause and then
	decrement MAIN_THREAD_BUSY.
	(meta_data_reader): Likewise.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (new_decoded_pad): Unref AUDIOPAD.

2008-11-25  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (meta_data_reader): Free TAGS.

2008-11-24  Neal H. Walfield  <neal@gnu.org>
